tests/sksl/errors/ReservedNameExternal.glsl
### Compilation failed:

error: 1: 'external' is a reserved word
int external;
    ^^^^^^^^
1 error
